# DockFW

./: .gitignore  CMakeLists.txt
hwlibs/ADS1115/: ads1115.c  ads1115.h
hwlibs/M24C0/: m24c0.c  m24c0.h
hwlibs/MCP4725/: mcp4725.c  mcp4725.h
src/: lora.c  lora.h  main.c
